# job_search

./: .gitignore  README.md  pyproject.toml  software_specs.txt
Sample CVs/: BA 20260623 Muhammad Zaky CV.docx  Integratation 20260629 IBM Brand Sales Muhammad Zaky CV.docx
antigravity/: AGENTS.md  SETUP.md  db_access.py
antigravity/agents/: cv-tailoring-agent.md
antigravity/references/: candidate-profile.md  cv-format-and-faithfulness.md  source-cv-index.md
antigravity/references/category-guides/: ai.md  ba.md  dynamics-365.md  integration.md  sales.md
antigravity/references/source-cv-extracts/: AI_BA 20260623 Muhammad Zaky CV.txt  BA 20260623 Muhammad Zaky CV.txt  Integratation 20260629 Muhammad Zaky CV.txt
antigravity/resources/: category-keywords.yaml  cv-section-order.yaml  output-locations.yaml  template-map.yaml
antigravity/scripts/: classify_job.py  list_starred_jobs.py  mark_cv_generated.py  prepare_output_folder.py
antigravity/skills/cv-customizer/: SKILL.md
antigravity/skills/cv-customizer/agents/: openai.yaml
antigravity/templates/content/: cover-letter-template.md  cv-outline-template.md  cv-tailoring-brief.md
antigravity/templates/docx/: ai-ba-template.docx
app/backend/: __init__.py  cli.py  main.py  sources_routes.py
app/backend/config/: settings.py
app/backend/db/: init_db.py  models.py  session.py
app/backend/ingestion/: __init__.py  fetcher.py  registry.py  routes.py  schemas.py  service.py  url_utils.py
app/backend/jobs/: __init__.py  repository.py  routes.py  schemas.py
config/: sources.yaml
(+13 files in other folders)
