[project]
name = "job-search-tracker"
version = "0.1.0"
description = "Local job-search tracker with HTML ingestion and SQLite storage."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "fastapi>=0.115",
    "httpx>=0.27",
    "jinja2>=3.1",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["app/backend/tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
